A simple API using Finch and Quill

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 *.class
 *.log
 
+#idea
+.idea/
+*.iml
+.*.swp
+
+# eclipse
+.classpath
+.project
+.settings/
+bin/
+
 # sbt specific
 .cache
 .history
