--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,6 @@ db.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 db.dataSource.user=postgres
 db.dataSource.password=postgres
 db.dataSource.databaseName=simpleapi
-db.dataSource.portNumber=5433
-db.dataSource.serverName=localhost
+db.dataSource.portNumber=5432
+db.dataSource.serverName=postgres
 db.connectionTimeout=30000
